--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.14.0
+annotated-types==0.7.0
 anyio==4.6.2.post1
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -10,10 +12,12 @@ babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
 certifi==2024.8.30
+certipy==0.2.1
 cffi==1.17.1
 charset-normalizer==3.4.0
 comm==0.2.2
 contourpy==1.3.1
+cryptography==43.0.3
 cycler==0.12.1
 debugpy==1.8.8
 decorator==5.1.1
@@ -46,11 +50,12 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
-jupyterlab==4.3.0
+jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.7
 lightgbm==4.5.0
+Mako==1.3.6
 MarkupSafe==3.0.2
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
@@ -61,10 +66,13 @@ nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
+notebook==7.2.2
 notebook_shim==0.2.4
 numpy==2.1.3
+oauthlib==3.2.2
 overrides==7.7.0
 packaging==24.2
+pamela==1.2.0
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
@@ -82,6 +90,8 @@ pure_eval==0.2.3
 py==1.11.0
 py4j==0.10.9.7
 pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
 pyparsing==3.2.0
 pyspark==3.5.3
@@ -104,6 +114,7 @@ setuptools==75.4.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.36
 stack-data==0.6.3
 sympy==1.13.1
 terminado==0.18.1
