--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ jupyter_core==5.7.2
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
 jupyterlab==4.2.5
+jupyterlab-language-pack-ja-JP==4.2.post3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.7
