--- a/requirements.txt
+++ b/requirements.txt
@@ -23,12 +23,16 @@ debugpy==1.8.8
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.9
+elastic-notebook==0.0.1
+exceptiongroup==1.2.2
 executing==2.1.0
 fastjsonschema==2.20.0
 filelock==3.16.1
+findspark==2.0.1
 fonttools==4.54.1
 fqdn==1.5.1
 fsspec==2024.10.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
@@ -70,6 +74,18 @@ networkx==3.4.2
 notebook==7.2.2
 notebook_shim==0.2.4
 numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
 overrides==7.7.0
 packaging==24.2
@@ -112,7 +128,6 @@ scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
 Send2Trash==1.8.3
-setuptools==75.4.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
@@ -127,6 +142,7 @@ torch==2.5.1
 torchvision==0.20.1
 tornado==6.4.1
 traitlets==5.14.3
+triton==3.1.0
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
 tzdata==2024.2
