--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "sudo apt update && sudo apt upgrade -y && pip install --upgrade pip && pip install -r requirements.txt && pip install ."
+	"postCreateCommand": "sudo apt update && sudo apt upgrade -y && pip install --upgrade pip && pip install . && pip install -r requirements.txt"
 
 	// Configure tool-specific properties.
 	// "customizations": {},
