--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,11 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    = elastic
+; package_dir =
+;     = elastic
 packages = find:
 python_requires = >=3.6
 
 [options.packages.find]
-where = src
+; where = src
+where = .
